add:a api about delete
